--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="home">
         <div class="hero">
             <nav>
-                <img src="image/a36f33fe-9e67-4a43-b836-c05116ce7d9e.jpg" alt="">
+                <img src="a36f33fe-9e67-4a43-b836-c05116ce7d9e.jpg" alt="">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About Us</a></li>
@@ -24,7 +24,7 @@
             <h1>Delicious Homemade Cakes for Every Sweet Moment</h1>
             <p>Made with love and the finest ingredients perfect for birthdays, celebrations, or just because.</p>
             <button>Order Now</button></div>
-            <img class="heroimg" src="image/images__3_-removebg-preview.png" alt="">
+            <img class="heroimg" src="images__3_-removebg-preview.png" alt="">
         </div>
     </header>
     <div class="about" id="about">
@@ -33,10 +33,10 @@
             <h1>Homemade with Love</h1>
             <p>Every cake is handcrafted in our kitchen using quality ingredients and a whole lot of heart</p>
         </div>
-        <img src="image/istockphoto-1319164505-612x612-removebg-preview.png" alt="">
+        <img src="istockphoto-1319164505-612x612-removebg-preview.png" alt="">
         </div>
         <div class="about-section">
-            <img src="image/istockphoto-1378380976-612x612-removebg-preview.png" alt="">
+            <img src="istockphoto-1378380976-612x612-removebg-preview.png" alt="">
             <div class="about-line">
                 <h1>Flavors That Make You Smile</h1>
                 <p>From classic vanilla to rich chocolate and beyond, we bake what you crave</p>
@@ -47,11 +47,11 @@
                     <h1>Your Moments, Our Cakes</h1>
                     <p>Perfect for birthdays, weddings, or just because made to make your day sweeter</p>
                 </div>
-                <img src="image/glass-jar-with-memories-notes-illustration-collect-moments-positive-thinking-and-mindfulness-keeping-good-memories-to-support-yourself-good-for-cards-poster-article-sticker-vector-removebg-preview.png" alt="">
+                <img src="glass-jar-with-memories-notes-illustration-collect-moments-positive-thinking-and-mindfulness-keeping-good-memories-to-support-yourself-good-for-cards-poster-article-sticker-vector-removebg-preview.png" alt="">
                 </div>
         </div>
     <div class="pricing" id="pricing">
-        <img src="image/menu.png" alt="">
+        <img src="menu.png" alt="">
     </div>
     <div class="contact" id="contact">
         <div class="contact-form">
@@ -64,7 +64,7 @@
         </div>
         <div class="contact-details">
             <div class="brand">
-                <img class="brandimg" src="image/ChatGPT_Image_Apr_6__2025__03_24_48_AM-removebg-preview.png" alt="">
+                <img class="brandimg" src="ChatGPT_Image_Apr_6__2025__03_24_48_AM-removebg-preview.png" alt="">
                 <div class="social-icon">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-instagram"></i>
@@ -89,7 +89,7 @@
     <footer>
         <div class="main-footer">
     <div class="brand">
-        <img class="brandimg" src="image/brandwhite.png" alt="">
+        <img class="brandimg" src="brandwhite.png" alt="">
         <div class="social-icon">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
@@ -123,7 +123,7 @@
     </div>
     </div>
     <div class="copyright">
-        <p>Copyright <i class="fa-regular fa-copyright"></i> 2025 <span><img src="image/brandwhite.png" alt=""></span></p>
+        <p>Copyright <i class="fa-regular fa-copyright"></i> 2025 <span><img src="brandwhite.png" alt=""></span></p>
         <p>All rights reserved</p>
     </div>
     </footer>
