--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="hero-line">
             <h1>Delicious Homemade Cakes for Every Sweet Moment</h1>
             <p>Made with love and the finest ingredients perfect for birthdays, celebrations, or just because.</p>
-            <button>Order Now</button></div>
+            <button><a href="#contact">Order Now</a></button></div>
             <img class="heroimg" src="images__3_-removebg-preview.png" alt="">
         </div>
     </header>
