--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="location">
         <h1>Location <i class="fa-solid fa-location-dot"></i> </h1>
-                <p>(Oppsite of Keramot Ullah Super Market) Ulipur Moddho Bazar, Ulipur, Kurigram</p>
+                <p>(Opposite of Keramot Ullah Super Market) Ulipur Moddho Bazar, Ulipur, Kurigram</p>
             </div>
             <div class="business-hour">
                 <h1>Business Hour <i class="fa-solid fa-clock"></i> </h1>
