--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
     </div>
     <div class="contact" id="contact">
         <form class="contact-form" action="https://formspree.io/f/xanelwba" method="POST">
+            <h1>Place Your Order</h1>
             <input type="text" name="name" placeholder="Your name" required>
             <input type="text" name="location" placeholder="Your location" required>
             <input type="number" name="phone" placeholder="Your phone number" required>
             <input class="msg" type="text" name="cake" placeholder="Cake name and amount" required>
+            <input class="date" type="date" name="date" placeholder="When would you like to pick up?" required>
             <button type="submit">Order Now</button>
-          </form>
+            <p class="btn" onclick="sendToWhatsApp()">Order Via WhatsApp <i class="fa-brands fa-whatsapp"></i></p>
+</form>
           
         <div class="contact-details">
             <div class="brand">
@@ -85,7 +88,6 @@
         </div>
         </div>
         <button id="backToTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-
     <footer>
         <div class="main-footer">
     <div class="brand">
