--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <input type="text" name="location" placeholder="Your location" required>
             <input type="number" name="phone" placeholder="Your phone number" required>
             <input class="msg" type="text" name="cake" placeholder="Cake name and amount" required>
-            <input class="date" type="date" name="date" placeholder="When would you like to pick up?" required>
+            <input class="date" type="date" name="date"required>
             <button type="submit">Order Now</button>
-            <p class="btn" onclick="sendToWhatsApp()">Order Via WhatsApp <i class="fa-brands fa-whatsapp"></i></p>
+            <p class="btn"><a href="https://wa.me/8801738205144?text=Hello%20I%20want%20to%20order%20a%20cake!" target="_blank">Order via WhatsApp <i class="fa-brands fa-whatsapp"></i></a></p>
 </form>
           
         <div class="contact-details">
