--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <input class="msg" type="text" name="cake" placeholder="Pickup Date" required>
             <button type="submit">Order Now</button>
             <p class="btn"><a href="https://wa.me/8801738205144?text=Hello%20I%20want%20to%20order%20a%20cake!" target="_blank">Order via WhatsApp <i class="fa-brands fa-whatsapp"></i></a></p>
+            <p class="btnf"><a href="https://www.facebook.com/thecakecell" target="_blank">Order via Facebook <i class="fa-brands fa-facebook"></i></i></a></p>
 </form>
           
         <div class="contact-details">
