--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <input type="text" name="location" placeholder="Your location" required>
             <input type="number" name="phone" placeholder="Your phone number" required>
             <input class="msg" type="text" name="cake" placeholder="Cake name and amount" required>
-            <input class="msg" type="text" name="cake" placeholder="Pickup Date" required>
+            <input type="text" name="location" placeholder="Pickup Date" required>
             <button type="submit">Order Now</button>
             <p class="btn"><a href="https://wa.me/8801738205144?text=Hello%20I%20want%20to%20order%20a%20cake!" target="_blank">Order via WhatsApp <i class="fa-brands fa-whatsapp"></i></a></p>
             <p class="btnf"><a href="https://www.facebook.com/thecakecell" target="_blank">Order via Facebook <i class="fa-brands fa-facebook"></i></i></a></p>
