--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
         </div>
     <div class="pricing" id="pricing">
-        <img src="image/menu.png" alt="">
+        <img src="menu.png" alt="">
     </div>
     <div class="contact" id="contact">
         <form class="contact-form" action="https://formspree.io/f/xanelwba" method="POST">
